# crb-alarm

./: Cargo.toml  README.md  TODO.md
.github/workflows/: workflow.yml
src/: anime.rs  app.rs  arc.rs  cli.rs  command_list.rs  fps.rs  lib.rs  main.rs  music_player.rs  shapes.rs  spoty.rs  theme.rs
