[package]
name = "cbr-alarm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.3"
ratatui = "0.28.1"
clap = {version = "4.5.17", features = ["derive"]}
rodio = "0.19.0"
rand = "0.8.5"
rust-embed = "8.5.0"
webbrowser = "1.0.3"


# cargo run --example pagination_sync --features="env-file cli client-ureq ureq-rustls-tls" --no-default-features
# spotify
rspotify = {version = "0.14.0", features = ["env-file", "cli"]}
# env_logger = { version = "0.11.0", default-features = false }
tokio = { version = "1.11.0", features = ["rt-multi-thread", "macros"] }


